[gd_scene load_steps=8 format=3 uid="uid://cbdcywcl071ak"]

[ext_resource type="PackedScene" uid="uid://dwudfkpd3jc4x" path="res://Scenes/Castle.tscn" id="1_ayrtb"]
[ext_resource type="Script" path="res://Scenes/Game.gd" id="1_pbx58"]
[ext_resource type="Texture2D" uid="uid://c3cbk2wuxb54k" path="res://Assets/Tilemaps/Tileset.png" id="3_b6qbe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_grs7o"]
size = Vector2(91.005, 188)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cxcr"]
size = Vector2(1150, 41)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_65qmh"]
texture = ExtResource("3_b6qbe")
10:14/0 = 0
10:15/0 = 0
11:14/0 = 0
11:15/0 = 0
12:14/0 = 0
12:15/0 = 0
13:14/0 = 0
13:15/0 = 0
14:14/0 = 0
14:15/0 = 0
15:14/0 = 0
15:15/0 = 0
16:14/0 = 0
16:15/0 = 0
17:14/0 = 0
17:15/0 = 0

[sub_resource type="TileSet" id="TileSet_4l6ak"]
sources/1 = SubResource("TileSetAtlasSource_65qmh")

[node name="Game" type="Node2D"]
script = ExtResource("1_pbx58")

[node name="CastleASM" parent="." instance=ExtResource("1_ayrtb")]
position = Vector2(64, 607)

[node name="CastleFCV" parent="." instance=ExtResource("1_ayrtb")]
position = Vector2(1088, 607)

[node name="SpawnTimerFCV" type="Timer" parent="."]
autostart = true

[node name="SpawnAreaFCV" type="Area2D" parent="."]
position = Vector2(1008, 585)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnAreaFCV"]
position = Vector2(-30, -74)
shape = SubResource("RectangleShape2D_grs7o")

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(576, 626.5)
shape = SubResource("RectangleShape2D_5cxcr")

[node name="TileMap" type="TileMap" parent="Ground"]
tile_set = SubResource("TileSet_4l6ak")
format = 2
layer_0/tile_data = PackedInt32Array(2490368, 655361, 14, 2555904, 655361, 14, 2490369, 720897, 14, 2555905, 720897, 14, 2490370, 786433, 14, 2555906, 786433, 14, 2490371, 851969, 14, 2555907, 851969, 14, 2490372, 917505, 14, 2555908, 917505, 14, 2490373, 983041, 14, 2555909, 983041, 14, 2490374, 1048577, 14, 2555910, 1048577, 14, 2490375, 1114113, 14, 2555911, 1114113, 14, 2490376, 655361, 15, 2555912, 655361, 14, 2490377, 720897, 15, 2555913, 720897, 14, 2490378, 786433, 15, 2555914, 786433, 14, 2490379, 851969, 15, 2555915, 851969, 14, 2490380, 917505, 15, 2555916, 917505, 14, 2490381, 983041, 15, 2555917, 983041, 14, 2490382, 1048577, 15, 2555918, 1048577, 14, 2490383, 1114113, 15, 2555919, 1114113, 14, 2490384, 655361, 15, 2555920, 655361, 14, 2490385, 720897, 15, 2555921, 720897, 14, 2490386, 786433, 15, 2555922, 786433, 14, 2490387, 851969, 15, 2555923, 851969, 14, 2490388, 917505, 15, 2555924, 917505, 14, 2490389, 983041, 15, 2555925, 983041, 14, 2490390, 1048577, 15, 2555926, 1048577, 14, 2490391, 1114113, 15, 2555927, 1114113, 14, 2490392, 655361, 14, 2555928, 655361, 14, 2490393, 720897, 14, 2555929, 720897, 14, 2490394, 786433, 14, 2555930, 786433, 14, 2490395, 851969, 14, 2555931, 851969, 14, 2490396, 917505, 14, 2555932, 917505, 14, 2490397, 983041, 14, 2555933, 983041, 14, 2490398, 1048577, 14, 2555934, 1048577, 14, 2490399, 1114113, 14, 2555935, 1114113, 14, 2490400, 655361, 14, 2555936, 655361, 14, 2490401, 720897, 14, 2555937, 720897, 14, 2490402, 786433, 14, 2555938, 786433, 14, 2490403, 851969, 14, 2555939, 851969, 14, 2490404, 917505, 14, 2555940, 917505, 14, 2490405, 983041, 14, 2555941, 983041, 14, 2490406, 1048577, 14, 2555942, 1048577, 14, 2490407, 1114113, 14, 2555943, 1114113, 14, 2490408, 655361, 14, 2555944, 655361, 14, 2490409, 720897, 14, 2555945, 720897, 14, 2490410, 786433, 14, 2555946, 786433, 14, 2490411, 851969, 14, 2555947, 851969, 14, 2490412, 917505, 14, 2555948, 917505, 14, 2490413, 983041, 14, 2555949, 983041, 14, 2490414, 1048577, 14, 2555950, 1048577, 14, 2490415, 1114113, 14, 2555951, 1114113, 14, 2490416, 655361, 14, 2555952, 655361, 14, 2490417, 720897, 14, 2555953, 720897, 14, 2490418, 786433, 14, 2555954, 786433, 14, 2490419, 851969, 14, 2555955, 851969, 14, 2490420, 917505, 14, 2555956, 917505, 14, 2490421, 983041, 14, 2555957, 983041, 14, 2490422, 1048577, 14, 2555958, 1048577, 14, 2490423, 1114113, 14, 2555959, 1114113, 14, 2490424, 655361, 14, 2555960, 655361, 14, 2490425, 720897, 14, 2555961, 720897, 14, 2490426, 786433, 14, 2555962, 786433, 14, 2490427, 851969, 14, 2555963, 851969, 14, 2490428, 917505, 14, 2555964, 917505, 14, 2490429, 983041, 14, 2555965, 983041, 14, 2490430, 1048577, 14, 2555966, 1048577, 14, 2490431, 1114113, 14, 2555967, 1114113, 14, 2490432, 655361, 14, 2555968, 655361, 14, 2490433, 720897, 14, 2555969, 720897, 14, 2490434, 786433, 14, 2555970, 786433, 14, 2490435, 851969, 14, 2555971, 851969, 14, 2490436, 917505, 14, 2555972, 917505, 14, 2490437, 983041, 14, 2555973, 983041, 14, 2490438, 1048577, 14, 2555974, 1048577, 14, 2490439, 1114113, 14, 2555975, 1114113, 14, 2621504, 655361, 15, 2621505, 720897, 15, 2621506, 786433, 15, 2621507, 851969, 15, 2621508, 917505, 15, 2621509, 983041, 15, 2621510, 1048577, 15, 2621511, 1114113, 15, 2621496, 655361, 15, 2621497, 720897, 15, 2621498, 786433, 15, 2621499, 851969, 15, 2621500, 917505, 15, 2621501, 983041, 15, 2621502, 1048577, 15, 2621503, 1114113, 15, 2621488, 655361, 15, 2621489, 720897, 15, 2621490, 786433, 15, 2621491, 851969, 15, 2621492, 917505, 15, 2621493, 983041, 15, 2621494, 1048577, 15, 2621495, 1114113, 15, 2621480, 655361, 15, 2621481, 720897, 15, 2621482, 786433, 15, 2621483, 851969, 15, 2621484, 917505, 15, 2621485, 983041, 15, 2621486, 1048577, 15, 2621487, 1114113, 15, 2621472, 655361, 15, 2621473, 720897, 15, 2621474, 786433, 15, 2621475, 851969, 15, 2621476, 917505, 15, 2621477, 983041, 15, 2621478, 1048577, 15, 2621479, 1114113, 15, 2621464, 655361, 15, 2621465, 720897, 15, 2621466, 786433, 15, 2621467, 851969, 15, 2621468, 917505, 15, 2621469, 983041, 15, 2621470, 1048577, 15, 2621471, 1114113, 15, 2621456, 655361, 15, 2621457, 720897, 15, 2621458, 786433, 15, 2621459, 851969, 15, 2621460, 917505, 15, 2621461, 983041, 15, 2621462, 1048577, 15, 2621463, 1114113, 15, 2621448, 655361, 15, 2621449, 720897, 15, 2621450, 786433, 15, 2621451, 851969, 15, 2621452, 917505, 15, 2621453, 983041, 15, 2621454, 1048577, 15, 2621455, 1114113, 15, 2621440, 655361, 15, 2621441, 720897, 15, 2621442, 786433, 15, 2621443, 851969, 15, 2621444, 917505, 15, 2621445, 983041, 15, 2621446, 1048577, 15, 2621447, 1114113, 15)

[connection signal="timeout" from="SpawnTimerFCV" to="." method="_on_spawn_timer_fcv_timeout"]
[connection signal="body_entered" from="SpawnAreaFCV" to="." method="_on_spawn_area_fcv_body_entered"]
[connection signal="body_exited" from="SpawnAreaFCV" to="." method="_on_spawn_area_fcv_body_exited"]
